gccida/g2/shorten_branches
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1393:4: error: expected ';' after expression
rtx v43; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1393:5: error: use of undeclared identifier 'v43'
rtx v43; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1438:4: error: expected ';' after expression
rtx align_tab[16]; // [rsp+20h] [rbp-B8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1438:5: error: use of undeclared identifier 'align_tab'
rtx align_tab[16]; // [rsp+20h] [rbp-B8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1474:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)insns[1].fld[0]; 
                       ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1490:15: error: expected ';' after expression
insns = ( rtx)v15.rtwint; 
              ^
              ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1531:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)insns[1].fld[0]; 
                       ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1538:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)insns[1].fld[0]; 
                       ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1546:15: error: expected ';' after expression
insns = ( rtx)v15.rtwint; 
              ^
              ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1555:20: error: expected expression
uid_align = ( rtx *)xcalloc( v2, 8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1556:31: error: use of undeclared identifier 'align_tab'
memset( align_tab, 0, sizeof( align_tab)); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1556:9: error: use of undeclared identifier 'align_tab'
memset( align_tab, 0, sizeof( align_tab)); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1561:35: error: expected ')'
for ( i = last_insn; i; i = ( rtx)i[1] ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1561:5: note: to match this '('
for ( i = last_insn; i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1568:8: error: use of undeclared identifier 'align_tab'
*v23 = align_tab[0]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1570:11: error: expected ';' after expression
i = ( rtx)i[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1575:8: error: use of undeclared identifier 'align_tab'
*v23 = align_tab[0]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1578:8: error: use of undeclared identifier 'align_tab'
*v23 = align_tab[v24]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1584:1: error: use of undeclared identifier 'align_tab'
align_tab[v25--] = i; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/final.c:1622:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v30 = ( __int16 *)rtx[2]; 
                  ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/shorten_branches/src/obj/final.o] Error 1
